--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Menu Selection</title>
 </head>
 <body>
-    
+    <header>
+        <nav></nav>
+    </header>
+    <section class="conteiner">
+    <section class="side-bar">
+        <nav class="navbar-side">
+            <div class="button"><a href="">Teste</a></div>
+            <div class="button"><a href="">Teste</a></div>
+            <div class="button"><a href="">Teste</a></div>
+            <div class="button"><a href="">Teste</a></div>
+        </nav>
+    </section>
+    <section class="content">
+        <header><h1>Jogos</h1></header>
+        <article></article>
+    </section>
+    </section>
+    <footer></footer>
 </body>
 </html>
