--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
     </section>
     <section class="content">
         <header><h1>Jogos</h1></header>
-        <article></article>
+        <article class="inner-content">
+            <div class="card-game"><img src="./img/Fortnite.webp" alt=""><a href="">1</a></img></div>
+            <div class="card-game"><img src="" alt=""><a href="">2</a></img></div>
+            <div class="card-game"><img src="" alt=""><a href="">3</a></img></div>
+            <div class="card-game"><img src="" alt=""><a href="">4</a></img></div>
+            <div class="card-game"><img src="" alt=""><a href="">5</a></img></div>
+            <div class="card-game"><img src="" alt=""><a href="">6</a></img></div>
+            <div class="card-game"><img src="" alt=""><a href="">7</a></img></div>
+            <div class="card-game"><img src="" alt=""><a href="">8</a></img></div>
+        </article>
     </section>
     </section>
     <footer></footer>
