--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <section class="content">
         <header><h1>Jogos</h1></header>
         <article class="inner-content">
-            <div class="card-game"><img src="./img/Fortnite.webp" alt=""><a href="">1</a></img></div>
-            <div class="card-game"><img src="" alt=""><a href="">2</a></img></div>
-            <div class="card-game"><img src="" alt=""><a href="">3</a></img></div>
-            <div class="card-game"><img src="" alt=""><a href="">4</a></img></div>
-            <div class="card-game"><img src="" alt=""><a href="">5</a></img></div>
-            <div class="card-game"><img src="" alt=""><a href="">6</a></img></div>
-            <div class="card-game"><img src="" alt=""><a href="">7</a></img></div>
-            <div class="card-game"><img src="" alt=""><a href="">8</a></img></div>
+            <div class="card-game"><a href="https://g.co/kgs/A4Y3JZ" target="_blank"><img src="./img/Fortnite.webp" alt="Fortnite"></img></a>1</div>
+            <div class="card-game"><a href=""><img src="" alt=""></a>2</div>
+            <div class="card-game"><a href=""><img src="" alt=""></a>3</div>
+            <div class="card-game"><a href=""><img src="" alt=""></a>4</div>
+            <div class="card-game"><a href=""><img src="" alt=""></a>5</div>
+            <div class="card-game"><a href=""><img src="" alt=""></a>6</div>
+            <div class="card-game"><a href=""><img src="" alt=""></a>7</div>
+            <div class="card-game"><a href=""><img src="" alt=""></a>8</div>
         </article>
     </section>
     </section>
