--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <section class="conteiner">
     <section class="side-bar">
         <nav class="navbar-side">
-            <div class="button"><a href="">Teste</a></div>
-            <div class="button"><a href="">Teste</a></div>
-            <div class="button"><a href="">Teste</a></div>
-            <div class="button"><a href="">Teste</a></div>
+            <div class="button"><a href="">Jogos</a></div>
+            <div class="button"><a href="">Aplicativos</a></div>
+            <div class="button"><a href="">Grupos</a></div>
+            <div class="button"><a href="">Biblioteca completa</a></div>
+            <div class="divider"></div>
         </nav>
     </section>
     <section class="content">
