--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
     </header>
     <section class="conteiner">
     <section class="side-bar">
+        <div class="profile">
+            <div class="img-profile"><img src="./img/Fortnite.webp" alt=""></div>
+            <h3>G4BRI3L GTR</h3>
+        </div>
         <nav class="navbar-side">
-            <div class="button"><a href="">Jogos</a></div>
+            <div class="button-active"><a href="">Jogos</a></div>
             <div class="button"><a href="">Aplicativos</a></div>
             <div class="button"><a href="">Grupos</a></div>
             <div class="button"><a href="">Biblioteca completa</a></div>
             <div class="divider"></div>
         </nav>
     </section>
+    <!-- <section class="side-bar-profile"></section> -->
     <section class="content">
         <header><h1>Jogos</h1></header>
         <article class="inner-content">
