--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <div class="img-profile"><img src="./img/Fortnite.webp" alt=""></div>
             <h3>G4BRI3L GTR</h3>
         </div>
-        <nav class="navbar-side">
-            <div class="button-active"><a href="">Jogos</a></div>
+            <div class="button active"><a href="">Jogos</a></div>
             <div class="button"><a href="">Aplicativos</a></div>
             <div class="button"><a href="">Grupos</a></div>
             <div class="button"><a href="">Biblioteca completa</a></div>
@@ -29,14 +28,77 @@
     <section class="content">
         <header><h1>Jogos</h1></header>
         <article class="inner-content">
-            <div class="card-game"><a href="https://g.co/kgs/A4Y3JZ" target="_blank"><img src="./img/Fortnite.webp" alt="Fortnite"></img></a>1</div>
-            <div class="card-game"><a href=""><img src="" alt=""></a>2</div>
-            <div class="card-game"><a href=""><img src="" alt=""></a>3</div>
-            <div class="card-game"><a href=""><img src="" alt=""></a>4</div>
-            <div class="card-game"><a href=""><img src="" alt=""></a>5</div>
-            <div class="card-game"><a href=""><img src="" alt=""></a>6</div>
-            <div class="card-game"><a href=""><img src="" alt=""></a>7</div>
-            <div class="card-game"><a href=""><img src="" alt=""></a>8</div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href="https://g.co/kgs/A4Y3JZ" target="_blank"><img src="./img/Fortnite.webp" alt="">1</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href=""><img src="" alt="">2</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href=""><img src="" alt="">3</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href=""><img src="" alt="">4</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href=""><img src="" alt="">5</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href=""><img src="" alt="">6</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href=""><img src="" alt="">7</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href=""><img src="" alt="">8</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href=""><img src="" alt="">9</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
+            <div class="cardBorder">
+                <div class="cardGame">
+                    <a href=""><img src="" alt="">10</a>
+                    <div class="cardBottom"></div>
+                </div>
+            </div>
+
         </article>
     </section>
     </section>
