--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             <div class="img-profile"><img src="./img/Fortnite.webp" alt=""></div>
             <h3>G4BRI3L GTR</h3>
         </div>
+        <div class="box">
+            <div class="searchBorder">
+                <div class="search">
+                    
+                    <input type="text" placeholder="Search">
+                </div>
+            </div>
+        </div>
+        <nav>
             <div class="button active"><a href="">Jogos</a></div>
             <div class="button"><a href="">Aplicativos</a></div>
             <div class="button"><a href="">Grupos</a></div>
